# ForgeMoE-R1-Coder

./: .gitignore  README.md  pyproject.toml
configs/agent/: candidate_generation_pipeline_v0.yaml  intent_repair_normalization_v0.yaml  model_io_v0.yaml  patch_hygiene_v0.yaml  prompt_contract_v1.yaml  self_repair_loop_v0.yaml  self_repair_loop_v1.yaml  structured_edit_intent_v0.yaml
configs/aws/: paths.yaml
configs/data/: agentic_trajectory_schema_v0.yaml  sota_dataset_governance_v0.yaml  task_schema_v0.yaml
configs/eval/: agentic_experiment_runner_v0.yaml  fullstack_agent_eval_v0.yaml  toy_agentic_benchmark_v0.yaml
configs/models/: model_adapter_v0.yaml  qwen2_5_coder_0_5b_baseline_v0.yaml  qwen2_5_coder_0_5b_structured_intent_v0.yaml  qwen3_coder_30b_a3b.yaml  tiny_real_model_smoke_v0.yaml
configs/training/: gpu_lora_sft_preflight_v0.yaml  local_adapter_training_plan_v0.yaml  local_lora_sft_dry_run_v0.yaml  qlora_agentic_sft_v0.yaml  structured_intent_sft_dataset_v0.yaml  structured_sft_curriculum_expansion_v1.yaml  structured_sft_dataset_expansion_v0.yaml  structured_sft_tokenization_refresh_v0.yaml
configs/verifier/: executable_verifier_v0.yaml
docs/: STEP9_AGENTIC_EVAL_HARNESS.md
docs/data/: SOTA_DATASET_STRATEGY_AND_GOVERNANCE.md
docs/engineering/: ADR_0013_MODEL_ADAPTER_RUNTIME_BOUNDARY.md  ADR_0016_TINY_REAL_MODEL_SMOKE.md  ADR_0017_FIRST_REAL_MODEL_RUNTIME.md  ADR_0018_FIRST_USEFUL_CODE_MODEL_BASELINE.md  ADR_0019_PROMPT_CONTRACT_V1.md  ADR_0020_PATCH_HYGIENE_BEFORE_REPAIR.md  ADR_0021_STRUCTURED_EDIT_INTENT_CONTRACT.md  (+13 more)
(+98 files in other folders)
